--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
         "barryvdh/laravel-snappy": "^0.4.0",
         "consoletvs/charts": "4.*",
         "felixkiss/uniquewith-validator": "^3.1",
-        "fideloper/proxy": "^4.0",
+        "fideloper/proxy": "~3.3",
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "intervention/image": "^2.3",
         "laracasts/flash": "^3.0",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^2.1",
         "stevebauman/location": "^2.0",
