--- a/composer.json
+++ b/composer.json
@@ -5,21 +5,23 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
+        "php": "^7.2|^8.0.2",
         "barryvdh/laravel-snappy": "^0.4.0",
-        "consoletvs/charts": "4.*",
+        "consoletvs/charts": "^7.0",
+        "doctrine/dbal": "^2.5",
         "felixkiss/uniquewith-validator": "^3.1",
-        "fideloper/proxy": "~3.3",
+        "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^3.0",
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
         "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "intervention/image": "^2.3",
         "laracasts/flash": "^3.0",
-        "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0",
-        "maatwebsite/excel": "^2.1",
-        "stevebauman/location": "^2.0",
-        "yajra/laravel-datatables-oracle": "~8.0",
-        "doctrine/dbal": "^2.5"
+        "laravel/framework": "^9.0",
+        "laravel/tinker": "~2.0",
+        "laravel/ui": "^3.0",
+        "maatwebsite/excel": "^3.1",
+        "stevebauman/location": "^5.2",
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -55,6 +57,9 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "kylekatarnls/update-helper": true
+        }
     }
 }
