--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.2|^8.0.2",
+        "php": "^8.1",
         "barryvdh/laravel-snappy": "^0.4.0",
         "consoletvs/charts": "^6.0",
         "doctrine/dbal": "^2.5",
@@ -17,6 +17,7 @@
         "intervention/image": "^2.3",
         "laracasts/flash": "^3.0",
         "laravel/framework": "^8.0",
+        "laravel/helpers": "^1.6",
         "laravel/tinker": "~2.0",
         "laravel/ui": "^3.0",
         "maatwebsite/excel": "^3.1",
