--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-snappy": "^0.4.0",
-        "consoletvs/charts": "^6.0",
+        "consoletvs/charts": "6.*",
         "doctrine/dbal": "^2.5",
         "felixkiss/uniquewith-validator": "^3.1",
         "fideloper/proxy": "^4.0",
